--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "vite"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "cdbreact": "^1.5.18",
     "google-translate-api": "^2.3.0",
@@ -18,6 +19,7 @@
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-sidebar": "^0.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-pro-sidebar": "^1.1.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
